# prime-agent-capstone

./: .env.example  .gitignore  README.md  app.py  architecture_summary.md  check_chroma_google.py  check_reportlab.py  cleanup_chroma.py  list_embedding_models.py  list_models.py  pyproject.toml  requirements.txt  submission_writeup.md
.streamlit/: config.toml
docs/: enterprise_design_system.md  enterprise_polish_design_system.md  premium_saas_design_system.md  ui_design_blueprint.md  ux_flow_map.md
notebooks/: kaggle_capstone_demo.ipynb
src/prime_agent/: config.py  debug_models.py  logging_config.py
src/prime_agent/agents/: credibility_agent.py  graph_definition.py  knowledge_graph_agent.py  learning_agent.py  orchestrator.py  progress_agent.py  research_agent.py  state.py  summarization_agent.py
src/prime_agent/evaluation/: eval_quizzes.py  eval_retrieval.py  eval_summaries.py
src/prime_agent/llm/: client.py
src/prime_agent/storage/: db.py  embed_utils.py  vector_store.py
src/prime_agent/tools/: credibility.py  html_loader.py  knowledge_graph.py  list_models.py  mind_map.py  pdf_loader.py  quiz_generator.py  summarizer.py  user_profile.py  web_search.py
src/prime_agent/ui/: app.py  app_streamlit.py  components.py
src/prime_agent/utils/: io_utils.py  pdf_generator.py  text_utils.py
tests/: test_agents_smoke.py  test_knowledge_graph.py  test_quiz_generator.py  test_text_utils.py  test_vector_store.py
